...
    <FlatListItemContent>
      <MessageAvatarContainerView onPress={handleAuthorAvatarPress}>
        <AvatarImage userHeader={postData.author} small={true} />
      </MessageAvatarContainerView>
      <MessageViewContainer>
        <MessageView
          testID={'forumPost-message'}
          author={postData.author}
          text={postData.text}
          timestamp={new Date(postData.createdAt)}
          showAuthor={true}
          fullWidth={true}
          showByline={true}
...
