...
                      testID={'contentPostInsert-button'}
                      icon={emojiPickerVisible || insertMenuVisible ? AppIcons.insertClose : AppIcons.insert}
                      onPress={handleInsertPress}
                    />
                  </View>
                  <View style={styles.inputWrapperView}>
                    <MentionTextField testID={'contentPostText-input'} style={styles.input} />
                    <ContentInsertPhotosView />
                  </View>
                  <View style={styles.inputWrapperViewSide}>
                    <SubmitIconButton
                      disabled={disabled || !values.text || !isValid}
                      submitting={overrideSubmitting || isSubmitting}
...
